[package]
name = "serde_utc_time_ms"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
time_ms_conversions = { git = "https://github.com/winksaville/time-ms-conversions" }

[dev-dependencies]
csv = "1.1.6"
serde_json = { version = "1.0.79", features = ["alloc"] }
